@@ -2,7 +2,9 @@
 AM_CFLAGS = -I$(top_srcdir)/include 
 
 bin_PROGRAMS = lnf_ex01_writer lnf_ex02_reader lnf_ex03_aggreg lnf_ex05_memtrans lnf_ex06_readreset \
-			lnf_ex07_filter lnf_ex08_statistics lnf_ex09_memlookup lnf_ex10_listmode lnf_ex11_memclean
+			lnf_ex07_filter lnf_ex08_statistics lnf_ex09_memlookup lnf_ex10_listmode lnf_ex11_memclean \
+			lnf_ex12_rec_raw
+			
 
 lnf_ex01_writer_SOURCES = lnf_ex01_writer.c
 lnf_ex01_writer_LDADD = ../src/.libs/libnf.a
@@ -41,4 +43,7 @@ lnf_ex10_listmode_LDADD = ../src/.libs/libnf.a
 
 lnf_ex11_memclean_SOURCES = lnf_ex11_memclean.c
 lnf_ex11_memclean_LDADD = ../src/.libs/libnf.a
+
+lnf_ex12_rec_raw_SOURCES = lnf_ex12_rec_raw.c
+lnf_ex12_rec_raw_LDADD = ../src/.libs/libnf.a
 
